src/test/ui/parser/shebang/issue-71471-ignore-tidy.stderr
error[E0601]: `main` function not found in crate `issue_71471_ignore_tidy`
  --> $DIR/issue-71471-ignore-tidy.rs:1:33
   |
LL | #!B
   |                                 ^ consider adding a `main` function to `$DIR/issue-71471-ignore-tidy.rs`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
